2004-09-19  Andy Wingo  <wingo@pobox.com>

	* scripts/tla-for-each: New script, does a tla command for all
	arch subdirs of the toplevel dir.

2004-09-17  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh (EXTRA_DIST): No more old release notes.

2004-09-16  Andy Wingo  <wingo@pobox.com>

	* AUTHORS: Add update-inventories to my AUTHORS list.

	* Makefile.am (EXTRA_DIST): No more old release notes.

	* RELEASE-NOTES-0.2.0.txt, RELEASE-NOTES-0.5.0.txt: Moved to the
	docs category.

	* NEWS: Distilled.

	* README: Updated.

2004-09-15  Andy Wingo  <wingo@pobox.com>

	* scripts/update-inventories: New script, will create
	arch-inventory entries for any untagged-source files. Useful for
	when you build in the source tree.

2004-09-08  Andy Wingo  <wingo@pobox.com>

	* NEWS: Initial version, still needs to be filled in.

	* AUTHORS: Updated.

2004-09-05  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh: No more m4/ dir, it was empty anyway. Use
	AC_PROG_LIBTOOL.

2004-09-04  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh (autogen_pkg): For the dev build-config, set
	package=guile-gnome-dev, so that no dev distribution tarball
	escapes into the wild with the name `guile-gnome'. Print out the
	package name and version. Just print the sorted dependency list,
	not the progress of the sort.
	(GUILE_LIBS): Require g-wrap 1.9.1 or greater.

2004-06-27  Andy Wingo  <wingo@pobox.com>

	* autogen-pkg.sh (ensure_dependencies): New function, taken from
	the main function because it needs to recurse.

2004-04-15  Andreas Rottmann  <a.rottmann@gmx.at>

	* [guile-gnome started]
