@@ -1,0 +1,2 @@
+EXTRA_DIST = dev-environ h2def.py Makefile.am.bottom \
+             autogen.sh autogen-pkg.sh autogen-support.sh HACKING
