@@ -166,9 +166,6 @@ EOF
 # this file is generated by autogen-pkg.sh
 
 SUBDIRS = $pkgs_ordered
-
-EXTRA_DIST = dev-environ h2def.py \\
-             autogen.sh autogen-pkg.sh autogen-support.sh
-
 EOF
+    cat Makefile.am.bottom >> Makefile.am
 }
